--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "mysql": "^2.18.1",
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
+    "react-animated-text": "^0.1.4",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-responsive-carousel": "^3.2.7",
+    "react-responsive-picture": "^3.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-text-transition": "^1.1.2",
+    "react-typing-animation": "^1.6.2",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
@@ -39,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-image-resizer": "^1.3.0"
   }
 }
