--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "@testing-library/user-event": "^7.2.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.24.0",
+    "flatlist-react": "^1.4.3",
     "mysql": "^2.18.1",
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-animated-text": "^0.1.4",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-icons": "^3.11.0",
+    "react-modal": "^3.11.2",
     "react-responsive-carousel": "^3.2.7",
     "react-responsive-picture": "^3.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-text-transition": "^1.1.2",
     "react-typing-animation": "^1.6.2",
-    "reactstrap": "^8.4.1"
+    "reactjs-localstorage": "^1.0.1",
+    "reactstrap": "^8.4.1",
+    "webpack": "4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
